--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru"> 
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,79 +11,71 @@
   </head>
   <body>
     <header class="header">
+      <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-list-item header__links-list-item_no-bullit">
-             <a class="header__link" href="#0">главная</a>
+             <a class="nav-link nav-link-active header__link" href="#0">главная</a>
           </li>
           <li class="header__links-list-item">
-             <a class="header__link" href="#0">посмотреть лоты</a>
+             <a class="nav-link header__link" href="#0">посмотреть лоты</a>
           </li>
           <li class="header__links-list-item">
-             <a class="header__link" href="#0">об аукционе</a>
+             <a class="nav-link header__link" href="#0">об аукционе</a>
           </li>
-        </ul>    
-        <div class="header__logo">
-          <img class="header__logo-image" src="images/logo-black.svg" alt="Логотип проекта">
-        </div>
-        <ul class="header__address-list">
-          <li class="header__address-list-item ">
-             <a class="header_address_link" href="tel:+70000000">+9 999 555 5555</a>
-          </li>
-          <li class="header__address-list-item">
-            <a class="header_address_link" href="mailto:mail@example.com">info@sobaka.ge</a>
-          </li>
-          <li class="header__address-list-item">
-            <address>наб. Принсенграхт 263-265, <br> Амстердам</address>
-          </li>
-        </ul>   
-
+        </ul>
+      </nav>    
+      <a href="#0" class="header__logo">
+        <img class="header__logo-image" src="images/logo-black.svg" alt="Логотип проекта">
+      </a>
+      <address class="address header__address">
+        <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="address__link" href="info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
+      </address>
     </header>
     <main>
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-           <div class="cover__text-container">
+           <span class="cover__text-container">
             <span class="cover__text">он</span>
             <span class="cover__text">о</span>
-           </div>
-           <div class="cover__text-center-container">
+           </span>
+           <span class="cover__text-center-container">
               <span class="cover__text-center">теб</span>
               <span class="cover__text-center">e</span>
-           </div>
-           <div class="cover__text-right-container">
+           </span>
+           <span class="cover__text-right-container">
               <span class="cover__text-right">н</span>
-              <span class="cover__text-right">a<span>д</span><span style="letter-spacing: 0">о</span></span>
-           </div>
+              <span class="cover__text-right">a<span>д</span><span class="cover__text-right-zero">о</span></span>
+           </span>
         </h1>
         <div class="cover__description">
-           <a class="cover__description-text">аукцион вещей, в которые никто не верил</a>
+           <p class="cover__description-text">аукцион вещей, в которые никто не верил</p>
            <button class="cover__description-button" type="button">сделать ставку</button>
         </div>
       </section>
       <section class="lots">
         <h2 class="lots__heading">лоты</h2>
         <div class="lots__card-list">
-          <div class="card card_type_film">
-            <div class="lots__card-list-item">
-              <div class="overlay"></div>
-              <h2 class="card__title-film">Фильм режиссёра,который <br> бросил киношколу</h2>
-              <p class="card__text-film">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
-            </div>
-          </div>
-          <div class="card card_type_book">
-            <div class="lots__card-list-item">
-              <div class="overlay"></div>
-              <h2 class="card__title-book">Книга, где описан один скучный день из жизни рекламного агента</h2>
-              <p class="card__text-book">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
-            </div>
-          </div>
-          <div class="card card_type_picture">
-            <div class="lots__card-list-item">
-              <div class="overlay"></div>
-              <h2 class="card__title-picture">Картина, которую повторит даже 5-летний сын маминой подруги</h2>
-              <div class="card__text-picture">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</div>
-            </div>
-          </div>
+          <article class="card card_type_film">
+            <a href="#0" class="card__link"></a>
+            <div class="overlay"></div>
+            <h3 class="card__title">Фильм режиссёра,который бросил киношколу</h3>
+            <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+          </article>
+          <article class="card card_type_book">
+            <a href="#0" class="card__link"></a>
+            <div class="overlay"></div>
+            <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+            <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+          </article>
+          <article class="card card_type_picture">
+            <a href="#0" class="card__link"></a>
+            <div class="overlay"></div>
+            <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+            <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+          </article>
         </div>
         <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
@@ -93,38 +85,32 @@
                   <img class="about__logo-image" src="images/logo-white.svg" alt="Логотип проекта">
               </div>
           </div>
-          <div class="about__column">
-            <h4 class="about__title">об аукционе</h4>
-            <div class="about__text">
-              <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
-              <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
-            </div>
+          <h2 class="about__title">об аукционе</h2>
+          <div class="about__text">
+            <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+            <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
           </div>
       </section>
     </main>
     <footer class="footer">
-        <ul class="header__address-list">
-          <li class="header__address-list-item">
-             <a class="header_address_link" href="tel:+70000000">+9 999 5555</a>
-          </li>
-          <li class="header__address-list-item">
-            <a class="header_address_link" href="mailto:mail@example.com">info@sobaka.ge</a>
-          </li>
-          <li class="header__address-list-item">
-            <address>наб. Принсенграхт 263-265, <br> Амстердам</address>
-          </li>
-        </ul>   
-        <ul class="footer__menu-list">
-          <li class="footer__menu-list-item footer__menu-list-item_active">
-             <a class="footer__menu-link" href="#0">главная</a>
-          </li>
-          <li class="footer__menu-list-item">
-             <a class="footer__menu-link" href="#0">посмотреть лоты</a>
-          </li>
-          <li class="footer__menu-list-item">
-             <a class="footer__menu-link" href="#0">об аукционе</a>
-          </li>
-        </ul>    
+        <address class="address footer__address">
+          <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
+          <a class="address__link" href="info@sobaka.ge">info@sobaka.ge</a>
+          <p>наб. Принсенграхт 263-265, Амстердам</p>
+        </address>
+        <nav class="footer__menu">
+          <ul class="footer__links-list">
+            <li class="footer footer">
+               <a class="nav-link nav-link-active footer__link" href="#0">главная</a>
+            </li>
+            <li class="footer__links-list-item">
+               <a class="nav-link footer__link" href="#0">посмотреть лоты</a>
+            </li>
+            <li class="footer__links-list-item">
+               <a class="nav-link footer__link" href="#0">об аукционе</a>
+            </li>
+          </ul>
+        </nav>    
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a href="#0">
