--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </address>
         <nav class="footer__menu">
           <ul class="footer__links-list">
-            <li class="footer footer">
+            <li class="footer__links-list-item">
                <a class="nav-link nav-link-active footer__link" href="#0">главная</a>
             </li>
             <li class="footer__links-list-item">
@@ -113,18 +113,18 @@
         </nav>    
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <a href="#0">
-            <img src="images/yt.svg" href="#0" alt="Иконка">
+          <a href="#0" target="_blank">
+            <img src="images/yt.svg" alt="Ютуб иконка">
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a href="#0">
-            <img src="images/vk.svg" href="#0" alt="Иконка">
+          <a href="#0" target="_blank">
+            <img src="images/vk.svg" alt="Вконтакте иконка">
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a href="#0">
-            <img src="images/pinterest.svg" href="#0" alt="Иконка">
+          <a href="#0" target="_blank">
+            <img src="images/pinterest.svg" alt="Пинтерест иконка">
           </a>
         </li>
       </ul>
