--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </a>
       <address class="address header__address">
         <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
-        <a class="address__link" href="info@sobaka.ge">info@sobaka.ge</a>
+        <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
     </header>
@@ -95,7 +95,7 @@
     <footer class="footer">
         <address class="address footer__address">
           <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
-          <a class="address__link" href="info@sobaka.ge">info@sobaka.ge</a>
+          <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           <p>наб. Принсенграхт 263-265, Амстердам</p>
         </address>
         <nav class="footer__menu">
