--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </li>
         </ul>
       </nav>    
-      <a href="#0" class="header__logo">
+      <a class="header__logo">
         <img class="header__logo-image" src="images/logo-black.svg" alt="Логотип проекта">
       </a>
       <address class="address header__address">
@@ -42,12 +42,12 @@
             <span class="cover__text">о</span>
            </span>
            <span class="cover__text-center-container">
-              <span class="cover__text-center">теб</span>
-              <span class="cover__text-center">e</span>
+              <span class="cover__text">теб</span>
+              <span class="cover__text cover__text-zero">e</span>
            </span>
            <span class="cover__text-right-container">
-              <span class="cover__text-right">н</span>
-              <span class="cover__text-right">a<span>д</span><span class="cover__text-right-zero">о</span></span>
+              <span class="cover__text">н</span>
+              <span class="cover__text">a<span>д</span><span class="cover__text-zero">о</span></span>
            </span>
         </h1>
         <div class="cover__description">
@@ -57,35 +57,46 @@
       </section>
       <section class="lots">
         <h2 class="lots__heading">лоты</h2>
-        <div class="lots__card-list">
-          <article class="card card_type_film">
-            <a href="#0" class="card__link"></a>
-            <div class="overlay"></div>
-            <h3 class="card__title">Фильм режиссёра,который бросил киношколу</h3>
-            <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
-          </article>
-          <article class="card card_type_book">
-            <a href="#0" class="card__link"></a>
-            <div class="overlay"></div>
-            <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
-            <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
-          </article>
-          <article class="card card_type_picture">
-            <a href="#0" class="card__link"></a>
-            <div class="overlay"></div>
-            <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
-            <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
-          </article>
-        </div>
+        <ul class="lots__card-list">
+          <li class="lots__card-item">
+            <a href="#0" class="card-link">
+              <article class="card card_type_film">
+                <div class="overlay"></div>
+                <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
+                <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-item">
+            <a href="#0" class="card-link">
+              <article class="card card_type_book">
+                <div class="overlay"></div>
+                <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+                <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-item">
+            <a href="#0" class="card-link">
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
+                <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+                <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+              </article>
+            </a>
+          </li>
+        </ul>
         <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
       <section class="about">
-          <div class="logo__column">
+          <div class="about__logo-wrap">
               <div class="about__logo">
                   <img class="about__logo-image" src="images/logo-white.svg" alt="Логотип проекта">
               </div>
           </div>
-          <h2 class="about__title">об аукционе</h2>
+          <div class="about__title-wrap">
+            <h2 class="about__title">об аукционе</h2>
+          </div>
           <div class="about__text">
             <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
             <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
